--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@vueuse/nuxt": "^10.9.0",
     "dayjs": "^1.11.11",
     "delay": "^6.0.0",
+    "eslint": "^9.2.0",
+    "eslint-plugin-format": "^0.1.1",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "maska": "^2.1.11",
@@ -62,7 +64,6 @@
     "@types/node": "^20.12.11",
     "changelogen": "^0.5.5",
     "concurrently": "^8.2.2",
-    "eslint": "^9.2.0",
     "nuxt": "^3.11.2",
     "typescript": "latest",
     "vitest": "^1.6.0",
