--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "nanoid": "^5.0.7",
     "nuxt-icon": "^0.6.10",
     "nuxt-particles": "^0.3.0",
+    "ofetch": "^1.3.4",
     "openai": "^4.46.1",
+    "scule": "^1.3.0",
+    "ufo": "^1.5.3",
     "unocss-preset-scrollbar": "^0.3.1"
   },
   "devDependencies": {
