--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "delay": "^6.0.0",
     "eslint": "^9.2.0",
     "eslint-plugin-format": "^0.1.1",
+    "fluent-vue": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "maska": "^2.1.11",
@@ -56,7 +57,8 @@
     "openai": "^4.46.1",
     "scule": "^1.3.0",
     "ufo": "^1.5.3",
-    "unocss-preset-scrollbar": "^0.3.1"
+    "unocss-preset-scrollbar": "^0.3.1",
+    "unplugin-fluent-vue": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/config-inspector": "^0.4.8",
