#fix lint fixes

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "release": "npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:inspector": "eslint-config-inspector",
@@ -55,6 +55,7 @@
     "nuxt-particles": "^0.3.0",
     "ofetch": "^1.3.4",
     "openai": "^4.46.1",
+    "pathe": "^1.1.2",
     "scule": "^1.3.0",
     "ufo": "^1.5.3",
     "unocss-preset-scrollbar": "^0.3.1",
