--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@unocss/eslint-plugin": "^0.60.0",
     "@unocss/nuxt": "^0.60.0",
     "@vueuse/nuxt": "^10.9.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "delay": "^6.0.0",
     "eslint": "^9.2.0",
