--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@directus/sdk": "^16.0.0",
     "@directus/types": "^11.1.1",
     "@floating-ui/vue": "^1.0.6",
+    "@nuxt/image": "^1.7.0",
     "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/device": "^3.1.1",
     "@types/lodash-es": "^4.17.12",
@@ -60,6 +61,7 @@
     "ofetch": "^1.3.4",
     "openai": "^4.46.1",
     "pathe": "^1.1.2",
+    "pretty-bytes": "^6.1.1",
     "scule": "^1.3.0",
     "ufo": "^1.5.3",
     "unocss-preset-scrollbar": "^0.3.1",
