--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "docker": "docker compose -f ./docker/docker-compose.yaml up -d"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.15",
+    "@ai-sdk/openai": "^0.0.14",
     "@antfu/eslint-config": "^2.17.0",
     "@directus/sdk": "^16.0.0",
     "@directus/types": "^11.1.1",
@@ -46,6 +48,7 @@
     "@unocss/eslint-plugin": "^0.60.0",
     "@unocss/nuxt": "^0.60.0",
     "@vueuse/nuxt": "^10.9.0",
+    "ai": "^3.1.14",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "delay": "^6.0.0",
@@ -59,13 +62,15 @@
     "nuxt-icon": "^0.6.10",
     "nuxt-particles": "^0.3.0",
     "ofetch": "^1.3.4",
-    "openai": "^4.46.1",
+    "ollama-ai-provider": "^0.7.0",
+    "openai": "^4.47.1",
     "pathe": "^1.1.2",
     "pretty-bytes": "^6.1.1",
     "scule": "^1.3.0",
     "ufo": "^1.5.3",
     "unocss-preset-scrollbar": "^0.3.1",
-    "unplugin-fluent-vue": "^1.3.0"
+    "unplugin-fluent-vue": "^1.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/config-inspector": "^0.4.8",
