--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "nuxt-icon": "^0.6.10",
     "nuxt-particles": "^0.3.0",
     "ofetch": "^1.3.4",
+    "ohash": "^1.1.3",
     "ollama-ai-provider": "^0.7.0",
     "openai": "^4.47.1",
     "pathe": "^1.1.2",
