--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@directus/sdk": "^16.0.0",
     "@directus/types": "^11.1.1",
     "@floating-ui/vue": "^1.0.6",
+    "@fluent/syntax": "^0.19.0",
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/device": "^3.1.1",
@@ -62,6 +63,7 @@
     "nuxt-icon": "^0.6.10",
     "nuxt-particles": "^0.3.0",
     "ofetch": "^1.3.4",
+    "ohash": "^1.1.3",
     "ollama-ai-provider": "^0.7.0",
     "openai": "^4.47.1",
     "pathe": "^1.1.2",
