--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@maslio/kit",
   "type": "module",
   "version": "0.1.3",
-  "description": "My personal kit for a nuxt project",
+  "description": "My personal kit for nuxt projects",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -25,14 +25,14 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "dev:docker": "docker compose -f ./docker/docker-compose.yaml up -d",
     "release": "npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:inspector": "eslint-config-inspector",
     "test": "vitest run",
     "test:watch": "vitest watch",
-    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit",
-    "docker": "docker compose -f ./docker/docker-compose.yaml up -d"
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
     "@ai-sdk/google": "^0.0.15",
