--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@maslio/kit",
+  "name": "@maslio/sdk",
   "type": "module",
   "version": "0.1.3",
   "description": "My personal kit for nuxt projects",
