--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@directus/types": "^11.1.1",
     "@floating-ui/vue": "^1.0.6",
     "@fluent/syntax": "^0.19.0",
+    "@nuxt/icon": "^1.0.0",
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/color-mode": "^3.4.1",
     "@nuxtjs/device": "^3.1.1",
@@ -60,7 +61,6 @@
     "lodash-es": "^4.17.21",
     "maska": "^2.1.11",
     "nanoid": "^5.0.7",
-    "nuxt-icon": "^0.6.10",
     "nuxt-particles": "^0.3.0",
     "ofetch": "^1.3.4",
     "ohash": "^1.1.3",
@@ -76,6 +76,10 @@
   },
   "devDependencies": {
     "@eslint/config-inspector": "^0.4.8",
+    "@iconify-json/fluent": "^1.1.58",
+    "@iconify-json/material-symbols": "^1.1.83",
+    "@iconify-json/mingcute": "^1.1.18",
+    "@iconify/json": "^2.2.225",
     "@nuxt/devtools": "^1.2.0",
     "@nuxt/eslint-config": "^0.3.10",
     "@nuxt/module-builder": "^0.6.0",
@@ -84,7 +88,7 @@
     "@types/node": "^20.12.11",
     "changelogen": "^0.5.5",
     "concurrently": "^8.2.2",
-    "nuxt": "npm:nuxt-nightly@latest",
+    "nuxt": "^3.11.2",
     "typescript": "latest",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.16"
